--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "pinia": "^2.0.23",
-    "vue": "^3.2.41",
+    "sass": "^1.57.1",
+    "vue": "^3.2.45",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
