--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@nuxt/ui": "^2.18.4",
+    "nuxt-file-storage": "^0.2.7",
     "sass": "^1.77.8"
   },
   "overrides": {
