--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --remote",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@nuxt/image": "^1.7.0",
     "@nuxthub/core": "^0.7.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@pinia/nuxt": "^0.5.3",
+    "lucia": "^3.2.0",
     "nuxt": "^3.12.4",
+    "oslo": "^1.2.1",
     "vue": "latest",
     "vue-draggable-plus": "^0.5.3",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nuxt/ui": "^2.18.4",
