--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "sass": "^1.77.8",
     "wrangler": "^3.72.3"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
   "overrides": {
     "vue": "latest"
   }
