--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.0",
     "@nuxt/ui": "^2.18.4",
     "nuxt-file-storage": "^0.2.7",
     "sass": "^1.77.8",
