--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@node-rs/argon2": "^1.8.3",
     "@nuxt/image": "^1.7.0",
     "@nuxthub/core": "^0.7.7",
     "@paralleldrive/cuid2": "^2.2.2",
