changed to pnpm

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   },
   "overrides": {
     "vue": "latest"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.21.2"
   }
 }
