--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@nuxt/devtools": "^1.5.1",
     "@nuxt/image": "^1.7.0",
     "@nuxthub/core": "^0.7.7",
     "@paralleldrive/cuid2": "^2.2.2",
