--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@nuxthub/core": "^0.7.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@pinia/nuxt": "^0.5.3",
+    "dotenv": "^16.4.5",
     "lucia": "^3.2.0",
+    "nodemailer": "^6.9.16",
     "nuxt": "^3.12.4",
     "oslo": "^1.2.1",
     "vue": "latest",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.2.0",
     "@nuxt/ui": "^2.18.4",
+    "@types/nodemailer": "^6.4.17",
     "nitro-cloudflare-dev": "^0.1.6",
     "sass": "^1.77.8",
     "wrangler": "^3.72.3"
