--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:remote": "nuxt dev --remote",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "docs:generate": "jsdoc . -c ./jsdoc.conf.json"
   },
   "dependencies": {
     "@lucia-auth/adapter-sqlite": "^3.0.2",
@@ -31,6 +32,8 @@
     "@iconify-json/material-symbols": "^1.2.0",
     "@nuxt/ui": "^2.18.4",
     "@types/nodemailer": "^6.4.17",
+    "better-docs": "^2.7.3",
+    "jsdoc": "^4.0.4",
     "nitro-cloudflare-dev": "^0.1.6",
     "sass": "^1.77.8",
     "wrangler": "^3.72.3"
